deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mh-classifier
  labels:
    project: mental-health-classifier
    course: cmpt756
